syntax = "proto3";

package users;

option go_package = "tripOrganizer/users";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}


// Define the Location message
message Location {
  string user_id = 1;
  double latitude = 2;
  double longitude = 3;
}

service UserService {
  rpc GetUserList (UserRequest) returns (UserListResponse);
  rpc GetUserById (UserIdRequest) returns (UserResponse);

  //RPC method for streaming GPS locations
  rpc StreamLocations (stream Location) returns (stream Location);

  // RPC method for streaming messages from client to server
  rpc Chat (stream ChatMessage) returns (stream ChatMessage);

}

message UserRequest {
}

message UserIdRequest {
  string user_id = 1;
}

message UserListResponse {
  repeated User users = 1;
}

message UserResponse {
  User user = 1;
}

// New message for streaming messages from client to server
message ChatMessage {
  string user_id = 1;
  string message = 2;
}

//message ChatResponse {
  //string status = 1;
//}
